[package]
name = "order_service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.6.0"
tokio = { version = "1.37.0", features = ["full"] }
sqlx = { version = "0.7.4", features = ["postgres", "runtime-async-std", "uuid"]}
dotenv = "0.15.0"
serde = "1.0.203"
serde_json = "1.0.117"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
chrono = "0.4.38"
uuid = { version = "1.8.0", features = ["v4", "serde"]}
lapin = "2.3.4"
